package seedu.address.logic;

/**
 * Represents the operating mode of the application.
 */
public enum AppMode {
    LOCKED,
    UNLOCKED
}
