@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR

skinparam classFontStyle plain

package Logic {
    class LogicManager
    class AddressBookParser
    class CommandRegistry
    class "{abstract}\nCommand" as Command
    class CommandContext
    class CommandResult
    class AppModeManager
    class AppMode
}

package Model {
    class "<<interface>>\nModel" as ModelApi
}

package Storage {
    class "<<interface>>\nStorage" as StorageApi
}

LogicManager --> AddressBookParser
LogicManager --> AppModeManager
LogicManager --> ModelApi
LogicManager --> StorageApi
LogicManager ..> CommandContext
LogicManager ..> Command

AddressBookParser --> CommandRegistry
CommandRegistry ..> Command

Command ..> CommandContext
Command ..> CommandResult
CommandContext --> ModelApi
CommandContext --> AppMode
AppModeManager --> AppMode
CommandResult --> AppMode

' hidden links to stabilize layout
LogicManager -[hidden]-> Command
LogicManager -[hidden]-> CommandResult
LogicManager -[hidden]-> CommandContext
AppModeManager -[hidden]-> AddressBookParser
StorageApi -[hidden]-> ModelApi

note bottom of CommandContext
  Captures the Model and AppMode
  at execution time.
end note

note right of CommandRegistry
  Delegates parsing to
  dedicated parsers for
  add, delete, edit,
  find, help, toggle,
  unlock, and view.

  Instantiates simple
  commands directly for
  clear, exit, list,
  lock, and setup.
end note
@enduml
